osprey_worker/src/osprey/engine/query_language/tests/test_validate_count_over/test_rhs_must_be_integer_literal.txt
error: `CountOver` threshold must be an integer literal
--> main.sml:2:71
     |
   2 | Query = CountOver(predicate=UserLoginIp == '1.1.1.1', window='10m') >= SomeVar
     |                                                                        ^ the right-hand side of `CountOver(...) <op> N` must be a concrete integer literal